# SongPerformer

./: .gitignore  README.md  SongPerformer.sln
CutEffectEditor/: Assembly-CSharp.csproj  BeatMapPlayer.sln  CutEffectEditor.sln  UniTask.Addressables.csproj  UniTask.DOTween.csproj  UniTask.Editor.csproj  UniTask.Linq.csproj  UniTask.TextMeshPro.csproj  UniTask.csproj
CutEffectEditor/Assets/Prefab/: BoxSlider.prefab  Cube.prefab  CutEffect.prefab
CutEffectEditor/ProjectSettings/: ProjectSettings.asset
Slicer/: CMakeLists.txt
Slicer/Unity/: UISlicer.unitypackage  UIWaveVisualizer.unitypackage
Slicer/Unity/Slicer/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Slicer.sln  UniTask.Addressables.csproj  UniTask.DOTween.csproj  UniTask.Editor.csproj  UniTask.Linq.csproj  UniTask.TextMeshPro.csproj  UniTask.csproj
Slicer/Unity/Slicer/Assets/Prefab/: SlicedBlock.prefab  Slicer.prefab  WaveVisualizer.prefab
Slicer/Unity/Slicer/Assets/Scenes/: SampleScene.unity
Slicer/Unity/Slicer/Assets/Script/: AudioClipUtils.cs  GraphRenderer.cs  SlicedBlock.cs  UILineRenderer.cs  UISlicer.cs  UIWaveVisualizer.cs
Slicer/Unity/Slicer/Assets/Shader/: UI-Default.mat
Slicer/test/: test.cpp
SongPerformer/: AudioManager.cs  JsonParser.cs  KeyFinder.cs  Logger.cs  Plugin.cs  SongPerformer.csproj  SongPerformerController.cs  manifest.json
SongPerformer/Configuration/: PluginConfig.cs
SongPerformer/CutEffect/: CutEffectMapLoader.cs
SongPerformer/Properties/: AssemblyInfo.cs
SongPerformer/UniTask/: PlayerLoopHelper.cs  UniTask.cs  UniTaskExtensions.cs
(+21 files in other folders)
